--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -18,7 +18,7 @@
 
     <!-- Disable warnings about AOT and trimming features on older targets, e.g. netstandard2.0.
          For now, continue to apply these features to these targets because some packages don't have a target that supports them -->
-    <NoWarn>$(NoWarn);NETSDK1195;NETSDK1210</NoWarn>
+    <NoWarn>$(NoWarn);NETSDK1195;NETSDK1210;CA2007</NoWarn>
 
     <EmbedUntrackedSources>true</EmbedUntrackedSources>
     <LangVersion>12.0</LangVersion>
